--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
-    "name": "ibejohn818/UserManager",
+    "name": "ibejohn818/user-manager",
     "description": "UserManager plugin for CakePHP",
     "type": "cakephp-plugin",
     "require": {
         "php": ">=5.4.16",
-        "cakephp/cakephp": "~3.0"
+        "cakephp/cakephp": "~3.0",
+        "google/apiclient": "1.0.*@beta"
     },
     "require-dev": {
         "phpunit/phpunit": "*",
