Add Facebook Login Provider Add Github Login Provider Update Config to be json saved in main Config Update Config setup to use a shell

--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,13 @@
 {
-    "name": "ibejohn818/user-manager",
+    "name": "your-name-here/UserManager",
     "description": "UserManager plugin for CakePHP",
     "type": "cakephp-plugin",
     "require": {
         "php": ">=5.4.16",
-        "cakephp/cakephp": "~3.0",
-        "google/apiclient": "1.0.*@beta"
+        "cakephp/cakephp": "~3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "*",
-        "google/apiclient": "1.0.*@beta"
-
+        "phpunit/phpunit": "*"
     },
     "autoload": {
         "psr-4": {
