--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "UserManager plugin for CakePHP",
     "type": "cakephp-plugin",
     "require": {
-        "php": ">=5.4.16",
+        "php": ">=~5.4",
         "cakephp/cakephp": "~3.0"
     },
     "require-dev": {
