--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "php":">=5.4",
         "cakephp/cakephp": "~3.0",
-        "google/apiclient": "1.0.*@beta",
+        "google/apiclient": "2.*",
         "facebook/graph-sdk": "*"
     },
     "require-dev": {
