--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,10 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "UserManager\\Test\\": "tests",
-            "UserManager\\Test\\Fixture": "tests/Fixture",
+            "UserManager\\Test\\": "./tests",
+            "UserManager\\Test\\Fixture\\": "./tests/Fixture",
             "Cake\\Test\\": "./vendor/cakephp/cakephp/tests"
         }
-    },
-    "scripts": {
-        "post-install-cmd": "UserManager\\Console\\Installer::postInstall"
     }
 
 }
