--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "cakephp/cakephp": "~3.0",
         "google/apiclient": "~2",
         "facebook/graph-sdk": "~5",
+        "erusev/parsedown": "^1.6",
         "phpunit/phpunit": "*"
 
     },
