--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ services:
 before_install:
   - docker pull ibejohn818/php:php71w-build
   - docker run --rm -it -v $(pwd):/code -w /code ibejohn818/php:php71w-build  /bin/bash -c '/usr/bin/composer update && /usr/bin/composer install'
-  - docker run --rm -it -v $(shell pwd):/code -w /code ibejohn818/php:php71w-build /bin/bash -c 'vendor/bin/phpunit tests'
+  - docker run --rm -it -v $(pwd):/code -w /code ibejohn818/php:php71w-build /bin/bash -c 'vendor/bin/phpunit tests'
