--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     }, 
     "require-dev": {
         "mikey179/vfsStream": "*", 
-        "phpunit/phpunit": "*"
+        "phpunit/phpunit": "6.*"
     }, 
     "description": "UserManager plugin for CakePHP"
 }
